--- a/assets/new_design/assets/css/ebo.css
+++ b/assets/new_design/assets/css/ebo.css
@@ -324,9 +324,31 @@
     text-align:left;
 }
 
+.whatsapp {
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom:40px;
+    right:40px;
+    background-color:#25d366;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:30px;
+    z-index:100;
+}
+  
+.whatsapp-icon {
+    margin-top:13px;
+}
 
+#eboWhatsapp i {
+    display: block;
+    line-height: 50px;
+    font-size: 22px;
+}
 
-.whatsAppFlotante.ebo {
+/*.whatsAppFlotante.ebo {
     background: #25d366;
     border: solid 5px #25d366;
 }
@@ -350,7 +372,6 @@
     text-align: center;
     vertical-align: middle;
     font-weight: bold;
-    /* box-shadow: inset 0 2px 0px rgb(255 255 255 / 25%), inset 0 -2px 0px rgb(0 0 0 / 18%); */
     transition: .2s;
     cursor: pointer;
     transform: translate(90px, 0px);
@@ -365,6 +386,7 @@
 #whatsAppFlotante.show {
     transform: translate(0px, 0px);
 }
+*/
 
 .comprarVisible {
     opacity: 1!important;
