--- a/assets/new_design/assets/css/style.css
+++ b/assets/new_design/assets/css/style.css
@@ -4812,6 +4812,27 @@ a.default-btn {
   height: 2px;
   background-color: #FFFFFF;
 }
+
+.slider-content-3 .banner3 h3::before {
+  position: absolute;
+  left: -110px;
+  top: 16px;
+  content: "";
+  width: 80px;
+  height: 2px;
+  background-color: #DBB893;
+}
+.slider-content-3 .banner3 h3::after {
+  position: absolute;
+  right: -110px;
+  top: 16px;
+  content: "";
+  width: 80px;
+  height: 2px;
+  background-color: #DBB893 ;
+}
+
+
 .slider-content-3 h1 {
   font-size: 72px;
   line-height: 56px;
@@ -6738,8 +6759,8 @@ a.default-btn {
 }
 .support-wrap .support-icon {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 50px;
-          flex: 0 0 50px;
+      -ms-flex: 0 0 43px;
+          flex: 0 0 43px;
   margin-right: 20px;
 }
 .support-wrap .support-icon img {
@@ -6773,8 +6794,8 @@ a.default-btn {
 }
 .support-wrap.support-2 .support-icon {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 41px;
-          flex: 0 0 41px;
+      -ms-flex: 0 0 43px;
+          flex: 0 0 43px;
 }
 .support-wrap.support-3 {
   margin-left: 9px;
@@ -6796,8 +6817,8 @@ a.default-btn {
 }
 .support-wrap.support-3 .support-icon {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 41px;
-          flex: 0 0 41px;
+      -ms-flex: 0 0 43px;
+          flex: 0 0 43px;
 }
 .support-wrap.support-4 {
   margin-left: 23px;
@@ -6819,8 +6840,8 @@ a.default-btn {
 }
 .support-wrap.support-4 .support-icon {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 35px;
-          flex: 0 0 35px;
+      -ms-flex: 0 0 50px;
+          flex: 0 0 50px;
 }
 .support-wrap:hover .support-icon img {
   -webkit-animation: 500ms ease-in-out 0s normal none 1 running tada;
