arreglo modal crear dia entrega 40-60 y arreglo modal front pedido repetido

--- a/assets/new_design/assets/css/ebo.css
+++ b/assets/new_design/assets/css/ebo.css
@@ -942,6 +942,12 @@
     .form-dia-entrega div {
         width:100%;
     }
+    .welcome-content h1 {
+        font-size:18px;
+    }
+    .welcome-content p {
+        line-height:23px;
+    }
 }
 
 @media only screen and (max-width: 425px) {
