--- a/assets/new_design/assets/css/ebo.css
+++ b/assets/new_design/assets/css/ebo.css
@@ -257,6 +257,13 @@
     padding: 35px;
 }
 
+#modalDiaEntregaDisabled .modal-dialog {
+    margin: 3% auto;
+    max-width: 650px;
+    width: 90%;
+    padding: 35px;
+}
+
 #modalImagenBolson .modal-dialog {
     margin: 3% auto;
     max-width: 900px;
@@ -265,6 +272,10 @@
 }
 #modalImagenBolson .modal-dialog .modal-header{
     justify-content: flex-end!important;
+}
+
+#modalDiaEntregaDisabled .modal-dialog .modal-header{
+    
 }
 
 .btn-green,
@@ -582,6 +593,7 @@
     box-shadow: 0px 5px 12px -6px black;
     padding: 18px 25px 17px!important;
     transition: all 0.3s ease 0s;
+    text-align:center;
 }
 
 .finalizarCompraSection .cart-shiping-update a:hover {
