--- a/assets/new_design/assets/css/ebo.css
+++ b/assets/new_design/assets/css/ebo.css
@@ -749,6 +749,18 @@
     margin-top:40px;
 }
 
+.forma-pago-title {
+    margin-top: 30px;
+}
+
+.no-padding {
+    padding: 0px!important;
+}
+
+.no-border {
+    border: 0px!important;
+}
+
 @-webkit-keyframes load5 {
     0%,
     100% {
@@ -867,6 +879,10 @@
     .bannerTextoPpal{
         line-height:55px!important;
         font-size:42px!important;
+    }
+
+    .banner_principal {
+        background-position:52%;
     }
 
     .banner1{
