--- a/backoffice/assets/css/backoffice.css
+++ b/backoffice/assets/css/backoffice.css
@@ -642,6 +642,89 @@ input[name="dataTo"] {
     overflow-y:scroll;
 }
 
+.pedidosFijosCreadosList {
+    font-size:14px;
+    max-height:400px;
+    overflow-y:scroll;
+}
+
+#pedidosPendientesAlert {
+    background: red;
+    width: 80px;
+    height: 80px;
+    position: fixed;
+    bottom:40px;
+    right:40px;
+    text-align: center;
+    z-index:100;
+}
+#pedidosPendientesAlert:before,
+#pedidosPendientesAlert:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 80px;
+    width: 80px;
+    background: red;
+}
+#pedidosPendientesAlert:before {
+    transform: rotate(30deg);
+}
+#pedidosPendientesAlert:after {
+    transform: rotate(60deg);
+}
+
+.labelPedidosAlerts {
+    font-size: 24px;
+    color: #000000;
+    position: relative;
+    z-index: 99;
+}
+
+
+#talkbubble {
+    width: 140px;
+    height: 80px;
+    right: 40px;
+    background: #FFFFFF;
+    position: fixed;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    font-size: 12px;
+    color: #000000;
+    padding-left: 10px;
+    z-index: 1;
+    text-decoration: none;
+  }
+
+  #talkbubble:before {
+    content: "";
+    position: absolute;
+    right: 100%;
+    top: 26px;
+    width: 0;
+    height: 0;
+    border-top: 13px solid transparent;
+    border-right: 26px solid #000000;
+    border-bottom: 13px solid transparent;
+  }
+
+.colorshadow {
+  border: 2px solid #000000;
+  
+  box-shadow: 6px 4px #000000;
+}
+
+.animate__pulse:hover{
+    animation-play-state: paused;
+}
+
+.bProcesarPedidosFijos{
+    font-size: 12px;
+}
+
 @media (min-width: 992px){
     .modal-lg{
         max-width:1000px!important;
@@ -678,5 +761,11 @@ input[name="dataTo"] {
 @media (min-width: 1240px){
     .modal-xl {
         max-width: 1220px;
+    }
+}
+
+@media (min-width: 1280px){
+    .container, .container-lg, .container-md, .container-sm, .container-xl {
+        max-width:1280px!important;
     }
 }
