:sparkles: tienda acepta pedidos 24hs

--- a/assets/new_design/assets/css/ebo.css
+++ b/assets/new_design/assets/css/ebo.css
@@ -773,6 +773,10 @@
     height:auto;
 }
 
+#modalAvisoPedidosFueraHorario {
+    height:auto;
+}
+
 @-webkit-keyframes load5 {
     0%,
     100% {
