--- a/assets/new_design/assets/css/style.css
+++ b/assets/new_design/assets/css/style.css
@@ -14607,7 +14607,7 @@ button.newsletter-btn-enviar:hover {
 }
 
 .ebo-cart-btn-green {
-  background-color: #16b108;
+  background-color: #4caf50;
   border: medium none;
   border-radius: 50px;
   color: #fff;
