:sparkles: last changes
:sparkles: sube un poco mas el flotante de pedidos pendientes
:sparkles: eliminar productos extra
:sparkles: hasta 100 items de extras al cargar el pedido en backoffice

--- a/backoffice/assets/css/backoffice.css
+++ b/backoffice/assets/css/backoffice.css
@@ -691,6 +691,7 @@ input[name="dataTo"] {
     width: 140px;
     height: 80px;
     right: 40px;
+    top:100px;
     background: #FFFFFF;
     position: fixed;
     -moz-border-radius: 10px;
